--- a/adaptive.css
+++ b/adaptive.css
@@ -22,6 +22,7 @@
         display: flex;
         justify-content: space-between;
         flex-direction: row-reverse;
+        z-index: 100;
     }
 
     .new { width: 85%; }
@@ -53,32 +54,37 @@
         position: absolute;
         top: 0;
         width: 100%;
-        height: 100vh;
-        background: var(--clr-primary);
+        padding-bottom: 1.7em;
     }
 
-    .task:last-child { margin: 0; }
+    .tasks { padding: 0 1em; }
 
     .todo-body {
-        min-height: 59vh;
-        max-height: 59vh;
-        overflow-y: scroll;
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: space-between;
+        padding: 0;
+        height: calc(100vh - 6.1em);
     }
 
-    /* styling delete stuff */
+    .tasks {
+        overflow-y: scroll;
+        padding-top: 1em;
+    }
 
     .delete-stuff {
-        display: flex;
-        position: fixed;
-        bottom: 1.7em;
+        background: var(--clr-primary);
+        position: initial;
+        padding: .5em 0;
     }
 
     .delete-stuff button {
         background: var(--clr-primary-light);
         padding: .5em 1em;
         border-radius: 1em;
-        margin: 0 1em;
-        margin-bottom: 1em;
+        width: 130px;
     }
+
+    .task:last-child { margin: 0; }
 
 }
