--- a/adaptive.css
+++ b/adaptive.css
@@ -51,7 +51,7 @@
     /* styling todo list */
 
     .todo-list {
-        position: fixed;
+        position: absolute;
         top: 0;
         width: 100%;
         padding-bottom: 1.7em;
